--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "react-copyright": "^0.0.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-pdf": "^5.7.2",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
