--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-pdf": "^5.7.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "react-vertical-timeline-component": "^3.5.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
