--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@floating-ui/react-dom": "^1.0.0",
     "@headlessui/react": "^1.6.6",
     "@heroicons/react": "^1.0.6",
+    "@material-tailwind/react": "^1.2.3",
+    "@react-ui-org/react-ui": "^0.47.0",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
@@ -14,6 +17,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-pdf": "^5.7.2",
+    "react-popover": "^0.5.10",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "react-vertical-timeline-component": "^3.5.2",
